feat: setup wiz